Closed
Bug 1882947
Opened 2 years ago
Closed 2 years ago
gfx/skia/skia/src/ports/SkTypeface_mac_ct.cpp:68:10: fatal error: 'nsCocoaFeatures.h' file not found
Categories
(Core :: Graphics: Text, defect)
Core
Graphics: Text
Tracking
()
RESOLVED
FIXED
125 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr115 | --- | unaffected |
| firefox123 | --- | wontfix |
| firefox124 | --- | wontfix |
| firefox125 | --- | fixed |
People
(Reporter: glandium, Assigned: glandium)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: regression)
Attachments
(1 file)
1:13.76 /tmp/gecko-ios/gfx/skia/skia/src/ports/SkTypeface_mac_ct.cpp:68:10: fatal error: 'nsCocoaFeatures.h' file not found
1:13.76 68 | #include "nsCocoaFeatures.h"
1:13.76 | ^~~~~~~~~~~~~~~~~~~
| Assignee | ||
Comment 1•2 years ago
|
||
Comment 2•2 years ago
|
||
Set release status flags based on info from the regressing bug 1858347
status-firefox123:
--- → affected
status-firefox124:
--- → affected
status-firefox125:
--- → affected
status-firefox-esr115:
--- → unaffected
Pushed by mh@glandium.org:
https://hg.mozilla.org/integration/autoland/rev/a57a4bc6a0da
Adjust SkTypeface_mac_ct.cpp after bug 1858347. r=gfx-reviewers,lsalzman
Comment 4•2 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 125 Branch
Updated•2 years ago
|
Comment 5•2 years ago
|
||
The patch landed in nightly and beta is affected.
:glandium, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- If no, please set
status-firefox124towontfix.
For more information, please visit BugBot documentation.
Flags: needinfo?(mh+mozilla)
| Assignee | ||
Updated•1 year ago
|
Flags: needinfo?(mh+mozilla)
You need to log in
before you can comment on or make changes to this bug.
Description
•