Bug 1882947 - Adjust SkTypeface_mac_ct.cpp after bug 1858347. r=gfx-reviewers,lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D203223